# Full-Text-Search

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/libfts/: CMakeLists.txt  libfts.cpp  libfts.hpp  libfts.test.cpp
src/libfts_app/: CMakeLists.txt
src/libindexer/: CMakeLists.txt  indexer.cpp  indexer.hpp  indexer.test.cpp
src/libparser/: CMakeLists.txt  config.xml  parser.cpp  parser.hpp  parser.test.cpp
